made changes in service files

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,11 +2,13 @@ FROM node:13-alpine
 
 RUN mkdir -p /home/app
 
-COPY . /home/app
-
 WORKDIR /home/app
 
+COPY package*.json ./ 
+
 RUN npm install
+
+COPY . .
 
 EXPOSE 3000
 
